--- a/argocd_ha.yaml
+++ b/argocd_ha.yaml
@@ -4,8 +4,10 @@ metadata:
   name: argocd
   namespace: argocd
 spec:
+  ha:
+    enabled: true
   server:
-    replicas: 3               # Enable HA for ArgoCD Server
+    replicas: 3
     resources:
       limits:
         cpu: "500m"
@@ -13,9 +15,8 @@ spec:
       requests:
         cpu: "250m"
         memory: "256Mi"
-
   repo:
-    replicas: 2               # Repository Server HA
+    replicas: 2
     resources:
       limits:
         cpu: "500m"
@@ -23,9 +24,8 @@ spec:
       requests:
         cpu: "250m"
         memory: "256Mi"
-
-  applicationController:
-    replicas: 3               # Application Controller HA
+  controller:
+    replicas: 3
     resources:
       limits:
         cpu: "500m"
@@ -33,17 +33,8 @@ spec:
       requests:
         cpu: "250m"
         memory: "256Mi"
-
   redis:
-    standalone:
-      size: 3                 # Redis HA - adjust size for replicas
-      resources:
-        limits:
-          cpu: "500m"
-          memory: "512Mi"
-        requests:
-          cpu: "250m"
-          memory: "256Mi"
-
+    ha:
+      enabled: true
   rbac:
-    policy: "local"           # Enable RBAC security
+    policy: "local"
