--- a/argocd_ha.yaml
+++ b/argocd_ha.yaml
@@ -1,4 +1,4 @@
-apiVersion: argoproj.io/v1beta1
+apiVersion: argoproj.io/v1alpha1
 kind: ArgoCD
 metadata:
   name: argocd
@@ -6,6 +6,7 @@ metadata:
 spec:
   ha:
     enabled: true
+
   server:
     replicas: 3
     resources:
@@ -15,6 +16,12 @@ spec:
       requests:
         cpu: "250m"
         memory: "256Mi"
+    autoscaling:
+      enabled: true
+      minReplicas: 2
+      maxReplicas: 5
+      targetCPUUtilizationPercentage: 75
+
   repo:
     replicas: 2
     resources:
@@ -24,7 +31,13 @@ spec:
       requests:
         cpu: "250m"
         memory: "256Mi"
-  controller:
+    autoscaling:
+      enabled: true
+      minReplicas: 2
+      maxReplicas: 4
+      targetCPUUtilizationPercentage: 75
+
+  applicationController:
     replicas: 3
     resources:
       limits:
@@ -33,8 +46,28 @@ spec:
       requests:
         cpu: "250m"
         memory: "256Mi"
+    autoscaling:
+      enabled: true
+      minReplicas: 3
+      maxReplicas: 6
+      targetCPUUtilizationPercentage: 75
+
   redis:
     ha:
       enabled: true
+    resources:
+      limits:
+        cpu: "500m"
+        memory: "512Mi"
+      requests:
+        cpu: "250m"
+        memory: "256Mi"
+
   rbac:
     policy: "local"
+
+  resourceCustomizations: |
+    argoproj.io/Application:
+      ignoreDifferences: |
+        jsonPointers:
+        - /status
