--- a/ingress.yaml
+++ b/ingress.yaml
@@ -1,14 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: argocd-prod-server-bridge
-  namespace: sonarqube
-spec:
-  type: ExternalName
-  externalName: argocd-prod-server.argocd
-  
----
-
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -16,17 +5,24 @@ metadata:
   namespace: sonarqube
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
+    nginx.org/mergeable-ingress-type: "master"
 spec:
   ingressClassName: nginx
+  tls:
+  - hosts:
+    - sonar.simplereact.online
+    secretName: tls-secret
   rules:
-  - http:
+  - host: sonar.simplereact.online  # Replace with your domain
+    http:
       paths:
-      - path: /argocd(/|$)(.*)
-        pathType: ImplementationSpecific
+      - path: /sonarqube
+        pathType: Prefix
         backend:
           service:
-            name: argocd-prod-server-bridge
+            name: sonarqube-service
             port:
-              number: 80
+              number: 9000
+
